# real-time-market-fraud-detector

./: .gitignore  README.md
lambda/: Cargo.toml  build-docker.bat  build-docker.sh  build.bat  build.sh
lambda/src/: ecs_client.rs  main.rs  sqs_handler.rs
proto/: market_surveillance.proto
python/: .dockerignore  Dockerfile  README.md  entrypoint.sh  generate_proto.py  requirements-inference.txt  requirements.txt  test_lambda.sh  test_market_data.json
python/models/: market_autoencoder.h5  market_autoencoder.tflite  market_classifier.h5  market_classifier.tflite  market_features.json  market_scaler.pkl  market_surveillance_config.json
python/src/: lambda_inference.py  main.py
python/src/inference/: __init__.py  config.py  data_fetcher.py  feature_engineer.py  grpc_server.py  model_loader.py  sqs_consumer.py
python/src/ingestion/: __init__.py  message_formatter.py  scheduler.py  sqs_producer.py
python/src/shared/: __init__.py  aws_client.py  config.py
python/src/training/: train_model.ipynb  train_model.py
rust/: .gitignore  Cargo.toml  Dockerfile  README.md
rust/src/: config.rs  main.rs  models.rs  sqs_client.rs  yahoo_client.rs
