[package]
name = "market-lambda-processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
# AWS Lambda runtime for Rust
lambda_runtime = "0.8"
# AWS SDK for ECS
aws-config = "1.1"
aws-sdk-ecs = "1.12"
# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Environment variables
dotenvy = "0.15"
# Logging
log = "0.4"
env_logger = "0.10"
# Error handling
anyhow = "1.0"
# UUID for correlation IDs
uuid = { version = "1.0", features = ["v4", "serde"] }
# Futures utilities
futures = "0.3"