[package]
name = "market-ingestion-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client for Yahoo Finance API
reqwest = { version = "0.11", features = ["json"] }
# AWS SDK for SQS
aws-config = "1.1"
aws-sdk-sqs = "1.12"
# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Environment variables
dotenvy = "0.15"
# Logging
log = "0.4"
env_logger = "0.10"
# Error handling
anyhow = "1.0"
# UUID for message deduplication
uuid = { version = "1.0", features = ["v4", "serde"] }
# Rate limiting
governor = "0.6"
# Retry logic
retry = "2.0"
# Random number generation for test mode
rand = "0.8"
# Yahoo Finance data fetching
yahoo_finance_api = "2.2"